welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: not found: value vuBiscuit
while (!vuBiscuit()){
        ^SourceCode:3: error: not found: value vuBiscuit
	if(estSurBiscuit()){recule(6);return vuBiscuit();}else{droite();avance();gauche();}} 
                                             ^