welcome.lessons.welcome.environment.Environment.scala.code
while (!vuBiscuit()){
	if(estSurBiscuit()){recule(6);return vuBiscuit();}else{droite();avance();gauche();}}